2008.10.11

* Created a new subpackage for web stuff.
* Moved admin subpackage into web subpackage.
* Added Twisted REST resource.

2008.10.10

* Removed commented out code.
* Updated createCertificate to use a random serial number.
* Added new coniguration rendering options based on Jehiah's patches; addresses
bug 277899.
* Broke up the RunningPage content into different methods.
* Updated getHeader and getFooter methods.
* Added content type methods.
* Removed the need to pass the config file to the config change checker, now
that Jehiah's change to the config object has been added: storing the filename
on an attribute.
* Pulled the save config code out of manager.checker and put it in a util
function.

2008.10.09

* Added a couple more useful methods to the tracker for managing host
resetting and updated the checker to make use of one of them.
* Added code for putting all hosts back into rotation on the condition that
there are no good hosts remaining.
* Replaced old logging references in manager.checker with twisted.python.log
calls.
* Added missing call to configuration method in
application.director.configuredProxyManagerFactory; fix submitted by Shaival
Varma and addresses bug 255498.
* Removed all references to custom logging and replaced with Twisted logging.
* Deleted custom logging module.

2008.10.08

* Added a check for not writing the control XML node if it is not defined; fix
from Jehiah; addresses bug 277959.

2008.10.04

* Added icons for use in the project, taken from the "gartoon" icon set.

2008.10.03

* Added a fix for bug 277184 supplied by Jehiah.
* Added a similar fix for the web admin UI.
* Added proper default for crypt salt in utility.
* Added a fix for the isReadOnly bug 277851 supplied by Jehiah.
* Removed miss-applied boolify function, a bug fix for 277879 supplied by
Jehiah.

2008.07.10 oubiwann

* Fixed refresh bug submitted by Steffen Oschatz.

2008.07.09 oubiwann

* Moved utility functions out of setup.py and into util module.