@@ -174,6 +174,9 @@ def setup(configFile):
     adminWeb = setupAdminWebUIServer(conf, director)
     if adminWeb:
         adminWeb.setServiceParent(services)
+    import pdb;pdb.set_trace()
+
+    # set up the RPC resources
 
     # set up the admin SSH server
     adminSSH = setupAdminSSHServer(conf, director, services)
